--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,10 +165,14 @@ html {
           padding-bottom: 2rem;
         }
 
+
+
     .product__description {
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
     }
+
+
 
     .product__extra {
       justify-content: space-between;
@@ -185,6 +189,8 @@ html {
             padding-left: 2rem;
             margin-bottom: 0.25rem;
           }
+
+
 
 .info {
   margin-top: 3rem;
@@ -212,5 +218,62 @@ html {
 
 
 /*----------*\
-#TABLETS-AND-MOBILE
+#RESPONSIVE-MODIFIERS
 \*----------*/
+
+@media only screen and (min-width: 1024px) {
+  /* desktop */
+
+  .display--desktop {
+    display: initial;
+  }
+
+  .display--mobile {
+    display: none;
+  }
+
+}
+
+@media only screen and (max-width: 1024px) {
+  /* tablet & smaller */
+
+  .container--maxwidth {
+    width: 1024px; /* For desktop */
+  }
+
+      .display--desktop {
+        display: none;
+      }
+
+      .display--mobile {
+        display: initial;
+      }
+
+      .menu-area {
+        justify-content: center;
+        font-size: 1.5rem;
+      }
+
+
+  .grid--area {
+    /* hide extra products */
+    overflow: hidden;
+  }
+
+  .grid__product {
+    min-width: 47%;
+    min-height: 0px;
+    margin-left: 2.5rem;
+  }
+
+    .grid__product:first-child {
+      /* hack to remove margin from first product */
+      margin-left: 0;
+    }
+
+
+  .product__extra--item {
+    width: 35%;
+  }
+
+}
