--- a/resources/css/visiborder.css
+++ b/resources/css/visiborder.css
@@ -6,7 +6,7 @@
     This style sheet is designed to provide easy visual indicators while building your HTML, complimenting the use of DevTools
 
     Load me AFTER any reset.css but BEFORE any other CSS files
-
+*/
 
 
 html {
